break words avoid overflow on mobile

--- a/website/css/index.css
+++ b/website/css/index.css
@@ -11,6 +11,7 @@ body {
 
 p {
   font-size: 25px;
+  word-break: break-word;
 }
 
 hr {
